--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       </header>
       <section>
         <h3>Welcome to GitHub Pages.</h3>
+        
+        <img src="http://a.espncdn.com/combiner/i?img=/i/headshots/nfl/players/full/1428.png&amp;w=350&amp;h=254" id="irc_mi" style="margin-top: 115px;" width="283" height="205">
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
