--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         
         <img src="http://a.espncdn.com/combiner/i?img=/i/headshots/nfl/players/full/1428.png&amp;w=350&amp;h=254" id="irc_mi" style="margin-top: 115px;" width="283" height="205">
 
-<h3>Support or Contact</h3>
+        <h3>Who's the man?</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <p>Peyton Manning</p>
+        <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
